syntax = "proto3";

package v1;

import "tagger/tagger.proto";

option go_package = "./v1;v1_pb";

message ProjectCreateRequest {
    string title = 1 [(tagger.tags) = "form:\"title\" json:\"title\" label:\"title\""];
    string ids = 2 [(tagger.tags) = "form:\"ids\" json:\"ids\" binding:\"ids\" label:\"ids\""];
}

message ProjectCreateResponse {
    string id = 1 [(tagger.tags) = "json:\"id\""];
}

message ProjectListRequest {}

message ProjectListResponse {
    message Item {
        string id = 1 [(tagger.tags) = "json:\"id\""];
        string title = 2 [(tagger.tags) = "json:\"title\""];
    }

    repeated Item items = 1 [(tagger.tags) = "json:\"items\""];
}

message ProjectDetailRequest {
    string id = 1 [(tagger.tags) = "form:\"id\" binding:\"required\" label:\"id\""];
}

message ProjectDetailResponse {
    string id = 1 [(tagger.tags) = "json:\"id\""];
    string name = 2 [(tagger.tags) = "json:\"name\""];
}

message ProjectMembersRequest {
    string project_id = 1 [(tagger.tags) = "form:\"project_id\" binding:\"required\" label:\"project_id\""];
}

message ProjectMembersResponse {
    message Item {
        int64 id = 1 [(tagger.tags) = "json:\"id\""];
        string username = 2 [(tagger.tags) = "json:\"username\""];
    }

    repeated Item items = 1 [(tagger.tags) = "json:\"items\""];
}

message ProjectInviteFriendsRequest {
    string project_id = 1 [(tagger.tags) = "form:\"project_id\" label:\"project_id\""];
}

message ProjectInviteFriendsResponse {
    message Item {
        int64 id = 1 [(tagger.tags) = "json:\"id\""];
        string username = 2 [(tagger.tags) = "json:\"username\""];
    }

    repeated Item items = 1 [(tagger.tags) = "json:\"items\""];
}

message ProjectInviteRequest {
    string project_id = 1 [(tagger.tags) = "binding:\"required\" label:\"project_id\""];
    string ids = 2 [(tagger.tags) = "binding:\"required,ids\" label:\"ids\""];
}

message ProjectInviteResponse {}
